...
                ColorPicker("", selection: $color)
            }
            TextField("태그 이름", text: $name)
            
            Text("설명")
                .font(.title).bold()
            TextEditor(text: $tagDescription)
        }
        .alert(isPresented: $showAlert) {
            Alert(title: Text("이름을 입력해주세요"), message: nil, dismissButton: .default(Text("닫기")))
        }
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
...
